--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "npm run config && ng serve",
+    "build": "npm run config && ng build",
+    "config": "ts-node ./scripts/set-env.ts",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -19,7 +20,9 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
     "rxjs": "~7.8.0",
+    "ts-node": "^10.9.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -29,7 +32,7 @@
     "@angular/compiler-cli": "^15.1.0",
     "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~4.3.0",
-    "@types/node": "^18.11.18",
+    "@types/node": "^18.11.19",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
