--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^15.1.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
+    "ngx-logger": "^5.0.11",
     "rxjs": "~7.8.0",
     "ts-node": "^10.9.1",
     "tslib": "^2.3.0",
